--- a/basic-email-template/basic-template.html
+++ b/basic-email-template/basic-template.html
@@ -40,7 +40,7 @@
                             <tbody>
                                 <tr>
                                     <td class="esd-stripe" align="center">
-                                        <table class="es-content-body" width="600" cellspacing="0" bgcolor="#0E1318" cellpadding="0" align="center">
+                                        <table class="es-content-body" width="600" cellspacing="0" bgcolor="#ffffff" cellpadding="0" align="center">
                                             <tbody>
                                                 <tr>
                                                     <td class="esd-structure es-p20t es-p20r es-p20l" align="left">
